# msai-pdc

./: readme.md
proto-bench/: Cargo.toml  readme-2.md  readme-2.md.recv
proto-bench/_tmp-stuff/: _main.rs  client.rs  client1.rs  server.rs
proto-bench/src/: _server.rs  cli.rs  client.rs  main.rs  models.rs  server.rs
snap4flame-backend/: README.md  pyproject.toml
snap4flame-backend/docker/: Dockerfile  docker-compose.yml
snap4flame-backend/src/snap4frame_backend/: app.yaml  client.py  client2.py  log.py  server.py
