[package]
name = "file-bullet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
clap = { version = "4.5.2", features = ["cargo", "derive"] }
tokio = { version = "1.36.0", features = ["net", "io-util"] }
